BUG#6762 ALTER TABLE gives weird results and error message  - Removed hardcoded error message from 4.1